Add some debug logging.

--- a/cagrid-cds/cagrid-cds-inttest/src/pax/etc/org.ops4j.pax.logging.cfg
+++ b/cagrid-cds/cagrid-cds-inttest/src/pax/etc/org.ops4j.pax.logging.cfg
@@ -21,3 +21,4 @@ log4j.appender.out.maxBackupIndex=10
 log4j.rootLogger=WARN, out, stdout, osgi\:*
 log4j.appender.out.layout.ConversionPattern=%d{ABSOLUTE} | %-5.5p | %-16.16t | %-32.32c{1} | %X{bundle.id} - %X{bundle.name} - %X{bundle.version} | %m%n
 log4j.logger.org.cagrid=DEBUG, out
+log4j.logger.org.globus=DEBUG, out
