Remove the integration test for now.

--- a/cagrid-gridgrouper/pom.xml
+++ b/cagrid-gridgrouper/pom.xml
@@ -92,6 +92,6 @@
 		<module>cagrid-gridgrouper-wsrf</module>
 		<module>cagrid-gridgrouper-soap-client</module>
 		<module>cagrid-gridgrouper-systest</module>
-		<module>cagrid-gridgrouper-inttest</module>
+		<!-- <module>cagrid-gridgrouper-inttest</module> -->
 	</modules>
 </project>
