--- a/cagrid-dorian/pom.xml
+++ b/cagrid-dorian/pom.xml
@@ -17,7 +17,6 @@
 				<artifactId>cagrid-dorian-api</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>cagrid-dorian-service</artifactId>
@@ -32,19 +31,23 @@
 				<groupId>${project.groupId}</groupId>
 				<artifactId>cagrid-dorian-soap-client</artifactId>
 				<version>${project.version}</version>
-			</dependency>	
-			
+			</dependency>
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>cagrid-dorian-service-tools</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>cagrid-gts-soap-client</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>cagrid-gts-api</artifactId>
 				<version>${project.version}</version>
-			</dependency>		
+			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>cagrid-gaards-api</artifactId>
@@ -63,6 +66,11 @@
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>cagrid-core</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>cagrid-systest</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
