--- a/cagrid-cds/cagrid-cds-inttest/pom.xml
+++ b/cagrid-cds/cagrid-cds-inttest/pom.xml
@@ -258,6 +258,11 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-dorian-service-tools</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-features</artifactId>
 			<classifier>features</classifier>
 			<type>xml</type>
