--- a/cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/dorian.properties
+++ b/cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/dorian.properties
@@ -1,4 +1,4 @@
-cagrid.dorian.service.name=DORIAN
+cagrid.dorian.service.name=DORIAN2
 cagrid.dorian.service.db.host=localhost
 cagrid.dorian.service.db.port=3306
 cagrid.dorian.service.db.user=root
@@ -7,7 +7,7 @@ cagrid.dorian.service.idp.name=Dorian
 cagrid.dorian.service.idp.renew.asserting.credentials=true
 cagrid.dorian.service.idp.asserting.credentials.password=idpkey
 cagrid.dorian.service.idp.min.uid=4
-cagrid.dorian.service.idp.max.uid=10
+cagrid.dorian.service.idp.max.uid=15
 cagrid.dorian.service.idp.password.min.length=10
 cagrid.dorian.service.idp.password.max.length=20
 cagrid.dorian.service.idp.password.lock.hours=4
@@ -15,11 +15,11 @@ cagrid.dorian.service.idp.password.lock.minutes=0
 cagrid.dorian.service.idp.password.lock.seconds=0
 cagrid.dorian.service.idp.password.cons.invalid.login=5
 cagrid.dorian.service.idp.password.max.invalid.login=500
-cagrid.dorian.service.idp.account.modification.policy=Admin
+cagrid.dorian.service.idp.account.modification.policy=User
 cagrid.dorian.service.federation.identity.policy=name
 cagrid.dorian.service.federation.min.idp.name.length=3
 cagrid.dorian.service.federation.max.idp.name.length=50
-cagrid.dorian.service.federation.certificate.lifetime.years=1
+cagrid.dorian.service.federation.certificate.lifetime.years=5
 cagrid.dorian.service.federation.certificate.lifetime.months=0
 cagrid.dorian.service.federation.certificate.lifetime.days=0
 cagrid.dorian.service.federation.certificate.lifetime.hours=0
@@ -30,8 +30,8 @@ cagrid.dorian.service.federation.host.certificate.renewal.policy=Admin
 cagrid.dorian.service.federation.user.certificate.lifetime.hours=12
 cagrid.dorian.service.federation.user.certificate.lifetime.minutes=0
 cagrid.dorian.service.federation.user.certificate.lifetime.seconds=0
-cagrid.dorian.service.federation.user.search.policy=Admin
-cagrid.dorian.service.federation.host.search.policy=Admin
+cagrid.dorian.service.federation.user.search.policy=Public
+cagrid.dorian.service.federation.host.search.policy=Public
 cagrid.dorian.service.federation.crl.publish=
 cagrid.dorian.service.ca.db.alias=dorianca
 cagrid.dorian.service.ca.password=admin
@@ -40,7 +40,7 @@ cagrid.dorian.service.ca.issued.cert.key.size=1024
 cagrid.dorian.service.ca.auto.create=true
 cagrid.dorian.service.ca.auto.create.subject=O=caBIG,OU=caGrid,OU=Training,CN=caGrid Training CA 2
 cagrid.dorian.service.ca.auto.create.key.size=2048
-cagrid.dorian.service.ca.auto.create.lifetime.years=10
+cagrid.dorian.service.ca.auto.create.lifetime.years=25
 cagrid.dorian.service.ca.auto.create.lifetime.months=0
 cagrid.dorian.service.ca.auto.create.lifetime.days=0
 cagrid.dorian.service.ca.auto.create.lifetime.hours=0
@@ -73,5 +73,9 @@ cagrid.dorian.service.legacy-ca.auto.renew.lifetime.days=0
 cagrid.dorian.service.legacy-ca.auto.renew.lifetime.hours=0
 cagrid.dorian.service.legacy-ca.auto.renew.lifetime.minutes=0
 cagrid.dorian.service.legacy-ca.auto.renew.lifetime.seconds=0
-cagrid.dorian.service.metadata.url=serviceMetadata.xml
-cagrid.dorian.service.security.metadata.url=serviceSecurityMetadata.xml
+cagrid.dorian.service.client.keystore.file=/etc/dorian/dorian-host.jks
+cagrid.dorian.service.client.keystore.password=changeit
+cagrid.dorian.service.client.key.alias=host
+cagrid.dorian.service.client.key.password=changeit
+cagrid.dorian.service.client.truststore.file=/etc/dorian/truststore.jks
+cagrid.dorian.service.client.truststore.password=changeit
