--- a/cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/bootstrapper.properties
@@ -1,7 +1,22 @@
 org.cagrid.commandline.prompt=true
-org.cagrid.dorian.hostname=dorian.bazinga4.cagrid.org
+cagrid.dorian.service.name=DORIAN
+cagrid.dorian.service.db.host=localhost
+cagrid.dorian.service.db.port=3306
+cagrid.dorian.service.db.user=root
+cagrid.dorian.service.db.password=
+cagrid.dorian.service.federation.crl.publish=
+org.cagrid.dorian.wsrf.hostname=dorian2.training.cagrid.org
+cagrid.dorian.wsrf.port=7734
+org.cagrid.dorian.legacy-wsrf.hostname=dorian.training.cagrid.org
 org.cagrid.dorian.admin.user.id=dorian
 org.cagrid.dorian.keystore.alias=host
 org.cagrid.dorian.keystore.password=changeit
 org.cagrid.dorian.key.password=changeit
 org.cagrid.dorian.truststore.password=changeit
+org.cagrid.dorian.configure.legacy.wsrf=true
+org.cagrid.dorian.legacy-certificate.location=/Users/langella/work/caGrid/Training/training-grid-configuration/Services/dorian.training.cagrid.org/dorian.training.cagrid.org-cert.pem
+org.cagrid.dorian.legacy-key.location=/Users/langella/work/caGrid/Training/training-grid-configuration/Services/dorian.training.cagrid.org/dorian.training.cagrid.org-key.pem
+org.cagrid.dorian.legacy-keystore.alias=host
+org.cagrid.dorian.legacy-keystore.password=changeit
+org.cagrid.dorian.legacy-key.password=changeit
+cagrid.dorian.legacy-wsrf.port=8443
