fixed cds tests not using right DB fixed resourcekey serialization

--- a/cagrid-cds/cagrid-cds-service/src/test/resources/META-INF/spring/cds.properties
+++ b/cagrid-cds/cagrid-cds-service/src/test/resources/META-INF/spring/cds.properties
@@ -1,6 +1,6 @@
 #General Configuration
 
-cagrid.cds.service.name=cds
+cagrid.cds.service.name=CDS_TEST
 cagrid.cds.service.max.delegation.path.length=0
 
 # Database Configuration
