--- a/cagrid-service-registration/cagrid-service-registration-systest/src/pax/etc/org.ops4j.pax.logging.cfg
+++ b/cagrid-service-registration/cagrid-service-registration-systest/src/pax/etc/org.ops4j.pax.logging.cfg
@@ -36,5 +36,5 @@ log4j.appender.out.append=true
 log4j.appender.out.maxFileSize=1MB
 log4j.appender.out.maxBackupIndex=10
 
-log4j.logger.org.cagrid.dorian=DEBUG
-log4j.logger.org.apache.cxf=FINE
+#log4j.logger.org.cagrid.dorian=DEBUG
+#log4j.logger.org.apache.cxf=FINE
