--- a/cagrid-gridgrouper/cagrid-gridgrouper-systest/src/test/resources/cagrid.gridgrouper.wsrf.cfg
+++ b/cagrid-gridgrouper/cagrid-gridgrouper-systest/src/test/resources/cagrid.gridgrouper.wsrf.cfg
@@ -1,8 +1,20 @@
-cagrid.gridgrouper.wsrf.keystore.password=inventrio
-cagrid.gridgrouper.wsrf.keystore.alias=tomcat
-cagrid.gridgrouper.wsrf.key.password=inventrio
-cagrid.gridgrouper.wsrf.truststore.password=inventrio
-cagrid.gridgrouper.legacy-wsrf.keystore.password=inventrio
-cagrid.gridgrouper.legacy-wsrf.keystore.alias=tomcat
-cagrid.gridgrouper.legacy-wsrf.key.password=inventrio
-cagrid.gridgrouper.legacy-wsrf.truststore.password=inventrio
+#GridGrouper WSRF Service Configuration saved by bootstrapper on Wed Aug 14 08:47:05 EDT 2013
+#Wed Aug 14 08:47:05 EDT 2013
+cagrid.gridgrouper.wsrf.keystore.path=${karaf.base}/etc/cagrid-grid-grouper/grid-grouper-host.jks
+cagrid.gridgrouper.legacy-wsrf.truststore.password=changeit
+cagrid.gridgrouper.legacy-wsrf.port=8444
+cagrid.gridgrouper.wsrf.keystore.alias=host
+cagrid.gridgrouper.wsrf.truststore.password=changeit
+cagrid.gridgrouper.legacy-wsrf.host=localhost
+cagrid.gridgrouper.wsrf.keystore.password=changeit
+cagrid.gridgrouper.legacy-wsrf.truststore.path=${karaf.base}/etc/cagrid-grid-grouper/truststore.jks
+cagrid.gridgrouper.legacy-wsrf.keystore.password=changeit
+cagrid.gridgrouper.legacy-wsrf.keystore.path=${karaf.base}/etc/cagrid-grid-grouper/legacy-grid-grouper-host.jks
+cagrid.gridgrouper.wsrf.key.password=changeit
+cagrid.gridgrouper.legacy-wsrf.key.password=changeit
+cagrid.gridgrouper.wsrf.truststore.path=${karaf.base}/etc/cagrid-grid-grouper/truststore.jks
+cagrid.gridgrouper.wsrf.port=7738
+cagrid.gridgrouper.legacy-wsrf.keystore.alias=host
+cagrid.gridgrouper.legacy-wsrf.url=https\://localhost\:8444/wsrf/services/cagrid/GridGrouper
+cagrid.gridgrouper.wsrf.url=https\://localhost\:7738/gridgrouper
+cagrid.gridgrouper.wsrf.host=localhost
