--- a/cagrid-gridgrouper/cagrid-gridgrouper-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-gridgrouper/cagrid-gridgrouper-service-tools/src/main/resources/bootstrapper.properties
@@ -2,10 +2,9 @@ org.cagrid.commandline.prompt=true
 cagrid.default.truststore.location=/Users/langella/ext/smx-dorian/etc/cagrid-dorian/truststore.jks
 cagrid.default.truststore.password=changeit
 cagrid.gridgrouper.service.name=grouper
-cagrid.gridgrouper.service.db.host=localhost
-cagrid.gridgrouper.service.db.port=3306
-cagrid.gridgrouper.service.db.user=root
-cagrid.gridgrouper.service.db.password=
+cagrid.gridgrouper.internet2.hibernate.connection.url=jdbc:mysql://localhost:3306/langella_grouper
+cagrid.gridgrouper.internet2.hibernate.connection.username=root
+cagrid.gridgrouper.internet2.hibernate.connection.password=
 cagrid.gridgrouper.wsrf.truststore.password=changeit
 cagrid.gridgrouper.wsrf.host=localhost
 cagrid.gridgrouper.certificate.location=/Users/langella/.cagrid/certificates/grouper.bazinga.stevelangella.com-cert.pem
