--- a/cagrid-service-registration/cagrid-service-registration-api/pom.xml
+++ b/cagrid-service-registration/cagrid-service-registration-api/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.cagrid</groupId>
-		<artifactId>cagrid-dorian</artifactId>
+		<artifactId>cagrid-service-registration</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>cagrid-service-registration-api</artifactId>
