Working on Dorian/HSM migration

--- a/cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/bootstrapper.properties
@@ -1,14 +1,16 @@
 org.cagrid.commandline.prompt=true
-cagrid.dorian.service.name=DORIAN
+cagrid.dorian.trust.ca.sha1.cert.location=/Users/langella/work/caGrid/Training/ca/training-grid-trust-fabric-sha1-ca-cert.pem
+cagrid.dorian.trust.ca.sha2.cert.location=/Users/langella/work/caGrid/Training/ca/training-grid-trust-fabric-sha2-ca-cert.pem
+cagrid.dorian.service.name=training_dorian
 cagrid.dorian.service.db.host=localhost
 cagrid.dorian.service.db.port=3306
 cagrid.dorian.service.db.user=root
 cagrid.dorian.service.db.password=
 cagrid.dorian.service.federation.crl.publish=
-org.cagrid.dorian.wsrf.hostname=dorian2.training.cagrid.org
+org.cagrid.dorian.wsrf.hostname=localhost
 cagrid.dorian.wsrf.port=7734
-org.cagrid.dorian.legacy-wsrf.hostname=dorian.training.cagrid.org
-org.cagrid.dorian.admin.user.id=dorian
+org.cagrid.dorian.legacy-wsrf.hostname=localhost
+org.cagrid.dorian.admin.user.id=langella
 org.cagrid.dorian.keystore.alias=host
 org.cagrid.dorian.keystore.password=changeit
 org.cagrid.dorian.key.password=changeit
