--- a/cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/dorian.properties
+++ b/cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/dorian.properties
@@ -1,4 +1,4 @@
-cagrid.dorian.service.name=DORIAN2
+cagrid.dorian.service.name=training_dorian
 cagrid.dorian.service.db.host=localhost
 cagrid.dorian.service.db.port=3306
 cagrid.dorian.service.db.user=root
