--- a/cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-dorian/cagrid-dorian-service-tools/src/main/resources/bootstrapper.properties
@@ -7,8 +7,8 @@ cagrid.dorian.service.db.port=3306
 cagrid.dorian.service.db.user=root
 cagrid.dorian.service.db.password=
 cagrid.dorian.service.federation.crl.publish=
-org.cagrid.dorian.wsrf.hostname=localhost
-cagrid.dorian.wsrf.port=7734
+org.cagrid.dorian.wsrf.hostname=dorian2.training.cagrid.org
+cagrid.dorian.wsrf.port=4443
 org.cagrid.dorian.legacy-wsrf.hostname=localhost
 org.cagrid.dorian.admin.user.id=langella
 org.cagrid.dorian.keystore.alias=host
