--- a/cagrid-service-registration/cagrid-service-registration-systest/pom.xml
+++ b/cagrid-service-registration/cagrid-service-registration-systest/pom.xml
@@ -149,6 +149,12 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-gaards-api</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-dorian-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
