--- a/cagrid-service-registration/cagrid-service-registration-systest/src/pax/etc/org.ops4j.pax.logging.cfg
+++ b/cagrid-service-registration/cagrid-service-registration-systest/src/pax/etc/org.ops4j.pax.logging.cfg
@@ -18,7 +18,7 @@
 ################################################################################
 
 # Root logger
-log4j.rootLogger=WARN, out, osgi:VmLogAppender
+log4j.rootLogger=INFO, stdout, osgi:VmLogAppender
 log4j.throwableRenderer=org.apache.log4j.OsgiThrowableRenderer
 
 # CONSOLE appender not used by default
@@ -36,5 +36,5 @@ log4j.appender.out.append=true
 log4j.appender.out.maxFileSize=1MB
 log4j.appender.out.maxBackupIndex=10
 
-#log4j.logger.org.cagrid.dorian=DEBUG
-#log4j.logger.org.apache.cxf=FINE
+log4j.logger.org.cagrid.dorian=DEBUG
+log4j.logger.org.apache.cxf=DEBUG
