--- a/cagrid-cds/cagrid-cds-service/src/test/resources/META-INF/spring/cds.properties
+++ b/cagrid-cds/cagrid-cds-service/src/test/resources/META-INF/spring/cds.properties
@@ -9,6 +9,7 @@ cagrid.cds.service.db.host=localhost
 cagrid.cds.service.db.port=3306
 cagrid.cds.service.db.user=root
 cagrid.cds.service.db.password=
+cagrid.cds.service.db.name=CDS_TEST
 
 
 #Key Manager Configuration
