--- a/cagrid-dorian/cagrid-dorian-wsrf/pom.xml
+++ b/cagrid-dorian/cagrid-dorian-wsrf/pom.xml
@@ -34,7 +34,38 @@
 				</configuration>
 			</plugin>
 
-
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-artifacts</id>
+						<phase>package</phase>
+						<goals>
+							<goal>attach-artifact</goal>
+						</goals>
+						<configuration>
+							<artifacts>
+								<artifact>
+									<file>src/main/resources/serviceMetadata.xml</file>
+									<type>xml</type>
+									<classifier>serviceMetadata</classifier>
+								</artifact>
+								<artifact>
+									<file>src/main/resources/serviceSecurityMetadata.xml</file>
+									<type>xml</type>
+									<classifier>serviceSecurityMetadata</classifier>
+								</artifact>
+								<artifact>
+									<file>src/main/resources/registration.xml</file>
+									<type>xml</type>
+									<classifier>registration</classifier>
+								</artifact>
+							</artifacts>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -56,7 +87,7 @@
 			<artifactId>cagrid-proxy-trust</artifactId>
 		</dependency>
 
-		
+
 	</dependencies>
 
 
