--- a/cagrid-cds/cagrid-cds-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-cds/cagrid-cds-service-tools/src/main/resources/bootstrapper.properties
@@ -23,3 +23,13 @@ cagrid.cds.legacy-key.location=
 cagrid.cds.legacy-wsrf.keystore.alias=host
 cagrid.cds.legacy-wsrf.keystore.password=changeit
 cagrid.cds.legacy-wsrf.key.password=changeit
+
+# Below properties are for CDS service backend to communicate (soap) with other services in the grid
+cagrid.cds.service.client.gridgrouper.url=https://localhost:7738/gridgrouper
+# Uncomment the following and set them to override defaults
+#cagrid.cds.service.client.keystorefile=
+#cagrid.cds.service.client.keystorepassword=
+#cagrid.cds.service.client.keyalias=
+#cagrid.cds.service.client.keypassword=
+#cagrid.cds.service.client.truststoreLocation=
+#cagrid.cds.service.client.truststorePassword=
