fixed GTS tests moved to SMX 4.5.2

--- a/cagrid-gts/cagrid-gts-tests/src/test/resources/cagrid.gts.wsrf.cfg
+++ b/cagrid-gts/cagrid-gts-tests/src/test/resources/cagrid.gts.wsrf.cfg
@@ -2,14 +2,14 @@ cagrid.gts.wsrf.keystore.password=inventrio
 cagrid.gts.wsrf.keystore.alias=tomcat
 cagrid.gts.wsrf.key.password=inventrio
 cagrid.gts.wsrf.truststore.password=inventrio
-cagrid.gts.wsrf.keystore.path=${karaf.base}/etc/cagrid-gts/host.jks
+cagrid.gts.wsrf.keystore.path=${karaf.base}/etc/cagrid-gts/gts-host.jks
 #cagrid.gts.wsrf.truststore.path=${karaf.base}/etc/cagrid-gts/truststore.jks
-#cagrid.gts.wsrf.port=7741
+cagrid.gts.wsrf.port=7742
 
 cagrid.gts.legacy-wsrf.keystore.password=inventrio
 cagrid.gts.legacy-wsrf.keystore.alias=tomcat
 cagrid.gts.legacy-wsrf.key.password=inventrio
 cagrid.gts.legacy-wsrf.truststore.password=inventrio
-cagrid.gts.legacy-wsrf.keystore.path=${karaf.base}/etc/cagrid-gts/host.jks
+cagrid.gts.legacy-wsrf.keystore.path=${karaf.base}/etc/cagrid-gts/gts-host.jks
 #cagrid.gts.legacy-wsrf.truststore.path=${karaf.base}/etc/cagrid-gts/truststore.jks
-#cagrid.gts.legacy-wsrf.port=7742
+cagrid.gts.legacy-wsrf.port=7741
