--- a/cagrid-gts/cagrid-gts-service/pom.xml
+++ b/cagrid-gts/cagrid-gts-service/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.cagrid</groupId>
@@ -73,7 +72,8 @@
                             !sun.security.action*,
                             !javax.swing*,
                             *</Import-Package>
-                        <Require-Bundle>org.apache.cxf.bundle</Require-Bundle>
+                        <!-- THIS WAS NECESSARY WITH SMX 4.5.1 (https://issues.apache.org/jira/browse/SMX4-1423), but not SMX 4.5.2:
+                            <Require-Bundle>org.apache.cxf.bundle</Require-Bundle> -->
                     </instructions>
                 </configuration>
             </plugin>
