--- a/cagrid-cds/cagrid-cds-service-tools/pom.xml
+++ b/cagrid-cds/cagrid-cds-service-tools/pom.xml
@@ -92,7 +92,38 @@
 			<artifactId>commons-cli</artifactId>
 			<version>1.2</version>
 		</dependency>
-
-
 	</dependencies>
+    <profiles>
+        <profile>
+            <id>configure</id>
+            <activation>
+                <property>
+                    <name>configure</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.2.1</version>
+                        <executions>
+
+                            <execution>
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <mainClass>org.cagrid.cds.service.tools.Bootstrapper</mainClass>
+                            <arguments>
+
+                            </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
