--- a/cagrid-cds/cagrid-cds-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-cds/cagrid-cds-service-tools/src/main/resources/bootstrapper.properties
@@ -1,5 +1,4 @@
-org.cagrid.commandline.prompt=true
-cagrid.default.truststore.location=
+org.cagrid.commandline.prompt=false
 cagrid.default.truststore.password=changeit
 cagrid.cds.service.name=cds
 cagrid.cds.service.db.host=localhost
@@ -9,24 +8,31 @@ cagrid.cds.service.db.user=root
 cagrid.cds.service.db.password=
 cagrid.cds.wsrf.truststore.password=changeit
 cagrid.cds.wsrf.host=localhost
-cagrid.cds.certificate.location=
-cagrid.cds.key.location=
+
+# uncomment these and set to avoid being prompted
+#cagrid.default.truststore.location=
+#cagrid.cds.certificate.location=
+#cagrid.cds.key.location=
+#cagrid.cds.legacy-certificate.location=
+#cagrid.cds.legacy-key.location=
+
 cagrid.cds.wsrf.port=7736
 cagrid.cds.wsrf.keystore.alias=host
 cagrid.cds.wsrf.keystore.password=changeit
 cagrid.cds.wsrf.key.password=changeit
+
+# Whether to configure a legacy port
 cagrid.cds.configure.legacy.wsrf=true
 cagrid.cds.legacy-wsrf.port=8443
 cagrid.cds.legacy-wsrf.host=localhost
-cagrid.cds.legacy-certificate.location=
-cagrid.cds.legacy-key.location=
+
 cagrid.cds.legacy-wsrf.keystore.alias=host
 cagrid.cds.legacy-wsrf.keystore.password=changeit
 cagrid.cds.legacy-wsrf.key.password=changeit
 
 # Below properties are for CDS service backend to communicate (soap) with other services in the grid
 cagrid.cds.service.client.gridgrouper.url=https://localhost:7738/gridgrouper
-# Uncomment the following and set them to override defaults
+# We won't prompt for these. Will default to same as above. Uncomment and set them here to override defaults.
 #cagrid.cds.service.client.keystorefile=
 #cagrid.cds.service.client.keystorepassword=
 #cagrid.cds.service.client.keyalias=
