CAGD-65 Create and implement cagrid-gme-system-tools project and Bootstrapper

--- a/cagrid-gme/cagrid-gme-service-tools/src/main/resources/bootstrapper.properties
+++ b/cagrid-gme/cagrid-gme-service-tools/src/main/resources/bootstrapper.properties
@@ -1,6 +1,6 @@
 org.cagrid.commandline.prompt=true
 
-cagrid.default.truststore.location=../cagrid-gme-systest/src/test/resources/truststore.jks
+cagrid.default.truststore.location=/Users/markrave/apache-servicemix-4.5.2/etc/dorian/truststore.jks
 cagrid.gme.wsrf.truststore.password=changeit
 cagrid.default.truststore.password=changeit
 
