--- a/cagrid-gme/cagrid-gme-service-tools/pom.xml
+++ b/cagrid-gme/cagrid-gme-service-tools/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 
 	<artifactId>cagrid-gme-service-tools</artifactId>
-	<name>caGrid Grid Grouper Service Tools</name>
+	<name>caGrid GME Service Tools</name>
 
 	<dependencies>
 		<dependency>
@@ -19,6 +19,11 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-dorian-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-dorian-soap-client</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
