--- a/cagrid-cds/cagrid-cds-wsrf/pom.xml
+++ b/cagrid-cds/cagrid-cds-wsrf/pom.xml
@@ -32,6 +32,34 @@
 					</instructions>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-artifacts</id>
+						<phase>package</phase>
+						<goals>
+							<goal>attach-artifact</goal>
+						</goals>
+						<configuration>
+							<artifacts>
+								<artifact>
+									<file>src/main/resources/serviceMetadata.xml</file>
+									<type>xml</type>
+									<classifier>serviceMetadata</classifier>
+								</artifact>
+								<artifact>
+									<file>src/main/resources/registration.xml</file>
+									<type>xml</type>
+									<classifier>registration</classifier>
+								</artifact>
+							</artifacts>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			
 		</plugins>
 	</build>
 
@@ -43,6 +71,10 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-service-registration-api</artifactId>
 		</dependency>
 	</dependencies>
 </project>
