--- a/cagrid-gridgrouper/cagrid-gridgrouper-service-tools/pom.xml
+++ b/cagrid-gridgrouper/cagrid-gridgrouper-service-tools/pom.xml
@@ -95,4 +95,38 @@
 
 
 	</dependencies>
+	
+		<profiles>
+		<profile>
+			<id>configure</id>
+			<activation>
+				<property>
+					<name>configure</name>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>1.2.1</version>
+						<executions>
+
+							<execution>
+								<goals>
+									<goal>java</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<mainClass>org.cagrid.gridgrouper.service.tools.Bootstrapper</mainClass>
+							<arguments>
+
+							</arguments>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
