CDS's AddAdmin tool and supporting changes; add correct messages in exceptions to SOAP end point

--- a/cagrid-cds/cagrid-cds-service/pom.xml
+++ b/cagrid-cds/cagrid-cds-service/pom.xml
@@ -76,7 +76,9 @@
 							org.cagrid.cds.service.impl.policy,
 							org.cagrid.cds.service.impl.util 
 						</Private-Package>
-						<Import-Package> org.apache.cxf.jaxws.spi, * 
+						<Import-Package>
+                            !org.apache.commons.cli,
+                            org.apache.cxf.jaxws.spi, *
 						</Import-Package>
 					</instructions>
 				</configuration>
@@ -169,14 +171,83 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.mysql.jdbc</groupId>
-			<artifactId>com.springsource.com.mysql.jdbc</artifactId>
-		</dependency>
+
+        <dependency>
+            <groupId>com.mysql.jdbc</groupId>
+            <artifactId>com.springsource.com.mysql.jdbc</artifactId>
+            <version>5.1.6</version>
+            <!-- need compile scope because AddAdmin tool needs it -->
+            <scope>compile</scope>
+        </dependency>
+
 		<dependency>
 			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+    <profiles>
+        <profile>
+            <id>AddAdmin</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <defaultGoal>validate</defaultGoal>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.7</version>
+                        <executions>
+                            <execution>
+                                <id>enter-grid-identity</id>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <phase>validate</phase>
+                                <configuration>
+                                    <target>
+                                        <input message="Please enter the grid identity:" addproperty="gridId.input" />
+                                    </target>
+                                    <exportAntProperties>true</exportAntProperties>
+                                </configuration>
+                            </execution>
+                        </executions>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.apache.ant</groupId>
+                                <artifactId>ant</artifactId>
+                                <version>1.8.4</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.1.1</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                                <phase>validate</phase>
+                                <configuration>
+                                    <mainClass>org.cagrid.cds.service.impl.util.AddAdmin</mainClass>
+                                    <arguments>
+                                        <argument>-conf</argument>
+                                        <argument>src/main/resources/META-INF/spring/cds-beans-configuration.xml</argument>
+                                        <argument>-properties</argument>
+                                        <argument>src/main/resources/tools/cds.properties</argument>
+                                        <argument>-admin</argument>
+                                        <argument>${gridId.input}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
