--- a/cagrid-gaards/cagrid-gaards-api/pom.xml
+++ b/cagrid-gaards/cagrid-gaards-api/pom.xml
@@ -206,11 +206,13 @@
 							org.cagrid.gaards.core,
 							org.cagrid.gaards.credentials,
 							org.cagrid.gaards.pki,
+                            org.cagrid.gaards.pki.tools,
 							org.cagrid.gaards.saml.encoding,
 							org.cagrid.gaards.security.servicesecurity,
 							org.oasis.names.tc.saml.assertion
 						</Export-Package>
 						<Import-Package>
+                            !org.apache.commons.cli,
 							schema.org.cagrid.gaards,
 							org.cagrid.gaards.authentication,
 							org.cagrid.gaards.authentication.faults,
@@ -232,6 +234,11 @@
 	</build>
 
 	<dependencies>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
+        </dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-metadata-model</artifactId>
