--- a/cagrid-dorian/cagrid-dorian-service/pom.xml
+++ b/cagrid-dorian/cagrid-dorian-service/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-dorian</artifactId>
-		<version>2.0.0-SNAPSHOT</version>
+		<version>2.0.0</version>
 	</parent>
 	<artifactId>cagrid-dorian-service</artifactId>
 	<packaging>bundle</packaging>
@@ -29,7 +28,7 @@
 					<driver>com.mysql.jdbc.Driver</driver>
 					<url>jdbc:mysql://localhost:3306</url>
 					<username>root</username>
-					<password/>
+					<password />
 					<skip>${skipTests}</skip>
 				</configuration>
 				<dependencies>
@@ -69,7 +68,7 @@
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package></Export-Package>
+						<Export-Package />
 						<Private-Package> org.cagrid.dorian.service.ca,
 							org.cagrid.dorian.service.federation, org.cagrid.dorian.service.idp,
 							org.cagrid.dorian.service.idp.dictionary,
