--- a/cagrid-gme/cagrid-gme-service/pom.xml
+++ b/cagrid-gme/cagrid-gme-service/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-gme</artifactId>
-		<version>2.0.0-SNAPSHOT</version>
+		<version>2.0.0</version>
 	</parent>
 	<artifactId>cagrid-gme-service</artifactId>
 	<packaging>bundle</packaging>
@@ -65,7 +64,7 @@
 					<instructions>
                         <DynamicImport-Package>*</DynamicImport-Package>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package></Export-Package>
+						<Export-Package />
 						<Private-Package>
 							org.cagrid.gme.service.impl,
                             org.cagrid.gme.service.impl.common,
