--- a/cagrid-gts/cagrid-gts-service/pom.xml
+++ b/cagrid-gts/cagrid-gts-service/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.cagrid</groupId>
         <artifactId>cagrid-gts</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
     <artifactId>cagrid-gts-service</artifactId>
     <packaging>bundle</packaging>
@@ -21,7 +21,7 @@
                     <driver>com.mysql.jdbc.Driver</driver>
                     <url>jdbc:mysql://localhost:3306</url>
                     <username>root</username>
-                    <password/>
+                    <password />
                     <skip>${skipTests}</skip>
                 </configuration>
                 <dependencies>
