--- a/cagrid-gts/cagrid-gts-wsrf/pom.xml
+++ b/cagrid-gts/cagrid-gts-wsrf/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-gts</artifactId>
-		<version>2.0.0-SNAPSHOT</version>
+		<version>2.0.0</version>
 	</parent>
 	<artifactId>cagrid-gts-wsrf</artifactId>
 	<packaging>bundle</packaging>
@@ -19,7 +18,7 @@
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package></Export-Package>
+						<Export-Package />
 						<Private-Package>org.cagrid.gts.service.wsrf</Private-Package>
 						<Import-Package>
 							schema.org.cagrid.gts,
