--- a/cagrid-cds/cagrid-cds-wsrf/pom.xml
+++ b/cagrid-cds/cagrid-cds-wsrf/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-cds</artifactId>
-		<version>2.0.0</version>
+		<version>2.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>cagrid-cds-wsrf</artifactId>
 	<packaging>bundle</packaging>
