--- a/cagrid-gaards/cagrid-gaards-api/pom.xml
+++ b/cagrid-gaards/cagrid-gaards-api/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-gaards</artifactId>
-		<version>2.0.1-SNAPSHOT</version>
+		<version>2.0.1</version>
 	</parent>
 	<artifactId>cagrid-gaards-api</artifactId>
 	<packaging>bundle</packaging>
