--- a/cagrid-service-registration/cagrid-service-registration-api/pom.xml
+++ b/cagrid-service-registration/cagrid-service-registration-api/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-service-registration</artifactId>
-		<version>2.0.1</version>
+		<version>2.0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>cagrid-service-registration-api</artifactId>
 	<packaging>bundle</packaging>
