--- a/cagrid-cds/cagrid-cds-inttest/src/pax/etc/cagrid.cds.service.cfg
+++ b/cagrid-cds/cagrid-cds-inttest/src/pax/etc/cagrid.cds.service.cfg
@@ -5,3 +5,7 @@ cagrid.cds.service.client.keyalias=host
 cagrid.cds.service.client.keypassword=changeit
 cagrid.cds.service.client.truststoreLocation=${karaf.base}/etc/cds/truststore.jks
 cagrid.cds.service.client.truststorePassword=changeit
+cagrid.cds.service.metadata.url=file://${karaf.base}/etc/cds/serviceMetadata.xml
+cagrid.cds.service.security.metadata.url=file://${karaf.base}/etc/cds/CredentialDelegationService-security-metadata.xml
+cagrid.cds.service.security.delegated.metadata.url=file://${karaf.base}/etc/cds/DelegatedCredential-security-metadata.xml
+
